--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>AmmarSysAdmin — Linux & Server Management</title>
-<meta name="description" content="AmmarSysAdmin — Linux Administrator. Server setup, security, web servers (Apache/Nginx), Bash scripting." />
+<title>AmmarSysAdmin — Linux & AWS Cloud Management</title>
+<meta name="description" content="AmmarSysAdmin — Linux Administrator & AWS Cloud Engineer. Server setup, security, web servers, AWS EC2, S3, RDS, VPC, Load Balancer, Auto Scaling, Bash scripting." />
 <style>
 :root{
   --bg-start:#6a11cb;
@@ -202,7 +202,7 @@ footer{
   <div class="logo">AS</div>
   <div class="hero">
     <h1 class="title">AmmarSysAdmin</h1>
-    <div class="subtitle">Linux Administrator • Server Management • Web Servers • Bash Scripting</div>
+    <div class="subtitle">Linux Administrator • AWS Cloud Engineer • Server Management • Bash Scripting</div>
     <div class="actions">
       <a class="btn btn-primary" href="https://www.fiverr.com/ammarsysadmin" target="_blank" rel="noopener">Contact Me on Fiverr</a>
       <a class="btn btn-secondary" href="#services">View My Services</a>
@@ -214,21 +214,30 @@ footer{
 <section class="card about-wrap" id="about">
 <h3>About Me</h3>
 <p>
-I'm AmmarSysAdmin, a professional Linux Administrator. I specialize in CentOS, Ubuntu, and Red Hat servers. 
+I'm AmmarSysAdmin, a professional Linux Administrator and AWS Cloud Engineer. I specialize in CentOS, Ubuntu, and Red Hat servers. 
 I ensure your servers are secure, optimized, and maintained for reliable uptime. 
 My work includes server setup, security hardening, web server configuration, and automation through Bash scripting.
+I also design and manage AWS cloud infrastructure, including EC2, S3, RDS, VPC, Load Balancers, and Auto Scaling for scalable and reliable solutions.
 </p>
 </section>
 
 <section class="card" id="services">
 <h3>My Services</h3>
 <div class="services-grid">
+<!-- Linux & Server Services -->
 <div class="service"><div class="icon">🖥️</div><h4>Linux Server Setup</h4><p>Install and configure CentOS, Ubuntu, or Red Hat with optimized settings for web hosting and apps.</p></div>
 <div class="service"><div class="icon">🔒</div><h4>Security Configuration</h4><p>Firewall rules, SSH hardening, updates, and best practices to protect your server and data.</p></div>
 <div class="service"><div class="icon">🌐</div><h4>DNS & Networking</h4><p>Configure DNS records, hostnames, and network settings to ensure reliable domain and connectivity.</p></div>
 <div class="service"><div class="icon">🔑</div><h4>SSH Access Setup</h4><p>Secure SSH key setup, user management, and permission control for safe remote administration.</p></div>
 <div class="service"><div class="icon">⚙️</div><h4>Bash Scripting</h4><p>Automate tasks with Bash scripts: backups, updates, monitoring tasks and routine maintenance.</p></div>
 <div class="service"><div class="icon">🧩</div><h4>Server Management</h4><p>Ongoing maintenance, log checks, troubleshooting, and performance tuning to keep your server stable.</p></div>
+
+<!-- AWS Cloud Services -->
+<div class="service"><div class="icon">☁️</div><h4>AWS EC2 Setup</h4><p>Launch and configure EC2 instances, setup security groups, and deploy applications in the cloud.</p></div>
+<div class="service"><div class="icon">🗄️</div><h4>S3 Storage</h4><p>Configure S3 buckets for public/private storage, lifecycle policies, and pre-signed URLs for secure access.</p></div>
+<div class="service"><div class="icon">🛡️</div><h4>RDS & Databases</h4><p>Setup and manage MySQL/PostgreSQL on AWS RDS, including backups, security, and scaling.</p></div>
+<div class="service"><div class="icon">⚡</div><h4>VPC & Networking</h4><p>Design VPCs, subnets, route tables, NAT, and security groups for secure, reliable networking.</p></div>
+<div class="service"><div class="icon">📈</div><h4>Load Balancing & Auto Scaling</h4><p>Setup ELB, configure Auto Scaling groups, and monitor performance for high availability.</p></div>
 </div>
 </section>
 
@@ -250,6 +259,11 @@ My work includes server setup, security hardening, web server configuration, and
 <h4>Web Server Setup</h4>
 <p>Apache/Nginx configuration for web applications.</p>
 </div>
+<div class="portfolio-item" data-title="AWS EC2 Deployment" data-description="Launched and configured EC2 instances for client apps." data-img="https://via.placeholder.com/400x200.png?text=AWS+EC2">
+<img src="https://via.placeholder.com/400x200.png?text=AWS+EC2" alt="AWS EC2 Deployment">
+<h4>AWS EC2 Deployment</h4>
+<p>Launched and configured EC2 instances for client apps.</p>
+</div>
 </div>
 </section>
 
@@ -263,7 +277,7 @@ My work includes server setup, security hardening, web server configuration, and
 </div>
 </section>
 
-<footer>© <span id="year"></span> AmmarSysAdmin — Linux & Server Management</footer>
+<footer>© <span id="year"></span> AmmarSysAdmin — Linux & AWS Cloud Management</footer>
 </main>
 </div>
 
