--- a/index.html
+++ b/index.html
@@ -204,7 +204,8 @@ footer{
     <h1 class="title">AmmarSysAdmin</h1>
     <div class="subtitle">Linux Administrator • AWS Cloud Engineer • Server Management • Bash Scripting</div>
     <div class="actions">
-      <a class="btn btn-primary" href="https://www.fiverr.com/ammarsysadmin" target="_blank" rel="noopener">Contact Me on Fiverr</a>
+      <!-- UPDATED: Fiverr gig link (opens gig directly in new tab) -->
+      <a class="btn btn-primary" href="https://www.fiverr.com/ammarservices1/linux-server-management-and-support" target="_blank" rel="noopener">Contact Me on Fiverr</a>
       <a class="btn btn-secondary" href="#services">View My Services</a>
     </div>
   </div>
@@ -273,7 +274,8 @@ I also design and manage AWS cloud infrastructure, including EC2, S3, RDS, VPC, 
 <p style="margin:0;color:rgba(255,255,255,0.88)">Click the button to contact me on Fiverr. I'll review your requirements and respond with clear next steps.</p>
 </div>
 <div style="min-width:220px;text-align:right">
-<a class="btn btn-primary" href="https://www.fiverr.com/ammarsysadmin" target="_blank" rel="noopener">Contact Me on Fiverr</a>
+  <!-- UPDATED: Fiverr gig link (opens gig directly in new tab) -->
+  <a class="btn btn-primary" href="https://www.fiverr.com/ammarservices1/linux-server-management-and-support" target="_blank" rel="noopener">Contact Me on Fiverr</a>
 </div>
 </section>
 
